--- a/dockertest1/Dockerfile
+++ b/dockertest1/Dockerfile
@@ -1,32 +1,18 @@
-############################################################
-# Dockerfile to build Python WSGI Application Containers
-# Based on Ubuntu
-############################################################
-
-# Set the base image to Ubuntu
 FROM ubuntu
 
-MAINTAINER Lukas Bauer <info@bauid.ch>
+MAINTAINER bauidch
 
-# Add the application resources URL
 RUN echo "deb http://archive.ubuntu.com/ubuntu/ $(lsb_release -sc) main universe" >> /etc/apt/sources.list
 RUN apt-get update
 RUN apt-get install -y tar git curl nano wget dialog net-tools build-essential
 RUN apt-get install -y python python-dev python-distribute python-pip
 
-# Copy the application folder inside the container
 ADD /pydata /pydata
 
-# Get pip to download and install requirements:
 RUN pip install -r /pydata/requirements.txt
 
-# Expose ports
 EXPOSE 80
 
-# Set the default directory where CMD will execute
 WORKDIR /pydata
 
-# Set the default command to execute    
-# when creating a new container
-# i.e. using CherryPy to serve the application
 CMD python server.py
