--- a/flask-deployer/Dockerfile
+++ b/flask-deployer/Dockerfile
@@ -9,7 +9,7 @@ MAINTAINER bauidch
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN apt-get update
-RUN apt-get -y install nginx sed python3-pip python3-dev uwsgi-plugin-python supervisor
+RUN apt-get -y install nginx sed python3-pip python3-dev build-essential uwsgi-plugin-python supervisor
 
 # Make logs dir
 RUN mkdir -p /var/log/nginx/app
@@ -23,6 +23,12 @@ RUN ln -s /etc/nginx/sites-available/flask-deployer.conf /etc/nginx/sites-enable
 COPY uwsgi.ini /usr/share/nginx/html/
 RUN echo "daemon off;" >> /etc/nginx/nginx.conf
 
-RUN pip install uwsgi flask pymongo
+RUN python3 -m pip install --upgrade pip
+RUN python3 -m pip install --upgrade virtualenv
+
+RUN pip install uwsgi
+RUN pip install flask 
+RUN pip install pymongo
 
 CMD ["/usr/bin/supervisord"]
+
