--- a/flask-deployer/flask-deployer.conf
+++ b/flask-deployer/flask-deployer.conf
@@ -7,11 +7,12 @@ server {
    
     location / {
         include uwsgi_params;
-        uwsgi_pass unix:/usr/share/nginx/html/uwsgi.sock;
+        uwsgi_pass unix:/var/www/app/uwsgi.sock;
     }
 
     location /static {
 	root /usr/share/nginx/html/;
     }
 }
+
 
