--- a/flask-dokku/requirements.txt
+++ b/flask-dokku/requirements.txt
@@ -1,2 +1,10 @@
-Flask==0.10
-gunicorn==0.14.2
+Flask==0.10.1
+gunicorn==19.4.5
+itsdangerous==0.24
+Jinja2==2.8
+requests==2.2.1
+six==1.5.2
+urllib3==1.7.1
+virtualenv==14.0.5
+Werkzeug==0.11.3
+
