--- a/pagekit/Dockerfile
+++ b/pagekit/Dockerfile
@@ -8,27 +8,23 @@ MAINTAINER bauidch
 
 ENV DEBIAN_FRONTEND noninteractive
 
-RUN echo 'deb http://us.archive.ubuntu.com/ubuntu/ precise universe' >> /etc/apt/sources.list
 RUN apt-get -y update
 RUN apt-get -y install nginx php5-fpm php5-json php5-cli php5-mysql php5-curl unzip git supervisor nano
 
-RUN git clone git://github.com/pagekit/pagekit.git
-RUN chown -R www-data:www-data /pagekit
+RUN curl -sS https://getcomposer.org/installer | php
+RUN mv composer.phar /usr/local/bin/composer
+
+RUN mkdir -p /pagekit/{public_html,logs}
+RUN mkdir -p /var/log/supervisor
+
 
 WORKDIR /pagekit
 
-# Install Composer
-RUN php -r "readfile('https://getcomposer.org/installer');" | php
-RUN php ./composer.phar install
-
-# Make logs dir
-RUN mkdir -p /var/log/nginx/app
-RUN mkdir -p /var/log/supervisor
+RUN chown -R www-data: /pagekit/public_html/
 
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
-RUN rm /etc/nginx/sites-enabled/default
-COPY pagekit.conf /etc/nginx/sites-available/
-RUN ln -s /etc/nginx/sites-available/pagekit.conf /etc/nginx/sites-enabled/pagekit.conf
+COPY pagekit_web.conf /etc/nginx/sites-available/pagekit_web.conf
+RUN ln -s /etc/nginx/sites-available/pagekit_web.conf /etc/nginx/sites-enabled/pagekit_web.conf
 
 RUN sed -e 's/;daemonize = yes/daemonize = no/' -i /etc/php5/fpm/php-fpm.conf
 RUN sed -e 's/;listen\.owner/listen.owner/' -i /etc/php5/fpm/pool.d/www.conf
